# Octagon-Texture-Packer

./: .gitignore  LICENSE  README.md
packing/: CMakeLists.txt  Packing.cpp  Packing.sln  Packing.vcxproj  Packing.vcxproj.filters  ReadMe.txt  stdafx.cpp  stdafx.h
packing/src/: BrutalPacking.cpp  BrutalPacking.h  Log.h  Types.h
python/: atlas.py  cutImage.py  drawOctagon.py  lzmaPNG.py  mergeAtlas.py  pixelStatis.py  pixelSummary.py  readJson.py  test.py  trimTrashPixel.py
samples/: atlas-0.json
